# repo-drag-glance

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  deny.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: README.md  architecture.md  blogpost.md  cli-usage.md  git-metrics.md
src/: alerts.rs  cli.rs  lib.rs  main.rs  model.rs  sanitize.rs  validate.rs
src/commands/: explain.rs  metrics.rs  mod.rs  scan.rs
src/git/: error.rs  mod.rs  run.rs
src/metrics/: mod.rs
src/report/: mod.rs  style.rs
tests/: README.md  cli_integration.rs
