[package]
name = "vprdashboard"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Git-based repo health signals for VP R&D"
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-org/vprdashboard"
readme = "README.md"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
colored = "3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tabled = "0.17"

[dev-dependencies]
serde_json = "1.0"
tempfile = "3.14"
