[package]
name = "repo-drag-glance"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
description = "Five git-log drag diagnostics on an unfamiliar codebase before you read code"
license = "MIT OR Apache-2.0"
repository = "https://github.com/i-am-noamg/repo-drag-glance"
readme = "README.md"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
colored = "3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tabled = "0.21"

[dev-dependencies]
serde_json = "1.0"
tempfile = "3.14"
